package tournament;

import java.util.ArrayList;

public class Grupo extends Season {
    public ArrayList<Team> getEquiposQueAvanzan(){
        return getTeams();
    };

}
