package tournament;

import java.util.ArrayList;

public class Llave extends Season {
        public ArrayList<Team> getEquiposQueAvanzan() {
                return getTeams();
        }
}