@startuml
class tournament.Match {
- String location
- Date date
- Team localTeam
- Team visitantTeam
- MatchResult result
+ <<Create>> Match(Team,Team)
+ String getLocation()
+ void setLocation(String)
+ Date getDate()
+ void setDate(Date)
+ Team getLocalTeam()
+ void setLocalTeam(Team)
+ Team getVisitantTeam()
+ void setVisitantTeam(Team)
+ MatchResult getMatchResult()
+ void setMatchResult(MatchResult)
+ String getMatchStatus()
+ void makeVisitantGoal(int)
+ void makeLocalGoal(int)
+ String getWinner()
}
class tournament.Team {
- String name
- ArrayList<Player> players
+ <<Create>> Team()
+ <<Create>> Team(String)
- <<Create>> Team(ArrayList<Player>)
+ <<Create>> Team(String,ArrayList<Player>)
+ <<Create>> Team(String,String[])
+ String getName()
+ void setName(String)
+ ArrayList<Player> getPlayers()
+ void showMembers()
+ void addPlayer(Player)
+ void setPlayers(ArrayList<Player>)
}
class tournament.Llave {
+ ArrayList<Team> getEquiposQueAvanzan()
}
class tournament.MatchResult {
- int localGoalCounter
- int visitantGoalCounter
+ <<Create>> MatchResult()
+ boolean localWin()
+ boolean tie()
+ int getLocalGoalCounter()
+ void setLocalGoalCounter(int)
+ int getVisitantGoalCounter()
+ void setVisitantGoalCounter(int)
}
class tournament.Grupo {
+ ArrayList<Team> getEquiposQueAvanzan()
}
class tournament.Player {
- int number
- String name
- String position
- int goalCounter
- Team team
+ <<Create>> Player()
+ <<Create>> Player(String)
+ <<Create>> Player(String,String)
+ <<Create>> Player(String,int)
+ String showTeam()
+ Team getTeam()
+ void setTeam(Team)
+ int getNumber()
+ void setNumber(int)
+ String getName()
+ void setName(String)
+ String getPosition()
+ void setPosition(String)
+ int getGoalCounter()
+ void setGoalCounter(int)
+ void incrementGoalCounter()
}
class Main {
+ {static} void main(String[])
}
class tournament.Season {
- String name
- Date startDate
- Date endDate
- ArrayList<Match> matches
- ArrayList<Team> teams
+ String getName()
+ void setName(String)
+ Date getStartDate()
+ void setStartDate(Date)
+ Date getEndDate()
+ void setEndDate(Date)
+ ArrayList<Match> getMatches()
+ void setMatches(ArrayList<Match>)
+ ArrayList<Team> getTeams()
+ void setTeams(ArrayList<Team>)
}


tournament.Season <|-- tournament.Llave
tournament.Season <|-- tournament.Grupo
@enduml